--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -21,7 +20,6 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-icons": "^3.0.0",
-    "@types/styled-components": "^5.1.23",
     "firebase-tools": "^11.24.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
